<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/main_position"
		android:id="@+id/editTextViewPosition"
		android:textSize="20sp"
		android:ellipsize="start"/>

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_margin="10dp">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/new_title"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/editEditTextTitle"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:singleLine="true"
			android:hint="请输入标题"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/new_hint"
			android:layout_marginTop="10dp"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/editEditTextHint"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:singleLine="true"
			android:hint="请输入提示语"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/new_point"
			android:layout_marginTop="10dp"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/editEditTextPoint"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:layout_width="match_parent"
			android:ems="10"
			android:gravity="top|left"
			android:layout_weight="1.0"
			android:hint="请输入知识点内容"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/edit_level"
			android:layout_marginTop="10dp"
			android:textSize="20sp"/>

		<EditText
			android:id="@+id/editEditTextLevel"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:layout_width="match_parent"
			android:ems="10"/>

	</LinearLayout>

</LinearLayout>

