<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="${relativePackage}.${activityClass}"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="right"
		android:visibility="gone">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="test"
			android:id="@+id/mainButtonTest"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/main_study"
			android:id="@+id/mainButtonStudy"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/main_export"
			android:id="@+id/mainButtonExport"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/main_position"
		android:id="@+id/mainTextViewPosition"
		android:textSize="20sp"
		android:ellipsize="start"/>

	<ListView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:id="@+id/mainListViewEdit"/>

</LinearLayout>

